Prevent body overflow, add styles for footer

--- a/src/elements.scss
+++ b/src/elements.scss
@@ -1,6 +1,7 @@
 body {
   font-family: "PT Sans", sans-serif;
   color: var(--text);
+  overflow: hidden;
 }
 
 h1,
@@ -48,4 +49,14 @@ dialog {
   padding: 0;
   border-color: var(--text);
   border-radius: 1em;
+}
+
+footer {
+  font-size: 0.7rem;
+  grid-column: 1 / -1;
+  place-self: center;
+
+  & a {
+    color: var(--text);
+  }
 }
